<resources>

    <string name="app_name">SIG Admin</string>
    <string name="btn_register">Daftar</string>
    <string name="tv_masuk">Masuk</string>
    <string name="btn_simpan_lap_baru">Simpan</string>
    <string name="nama_sub_lapangan_hint">Kode Lapangan</string>
    <string name="btn_simpan_sub_lap_baru">Simpan</string>
    <string name="et_email">Email</string>
    <string name="et_nama_admin">Nama Pengguna</string>
    <string name="login_info">Silahkan Login menggunakan Email dan Kata Sandi yang telah terdaftar.</string>


    <!--    Array jenis lapangan-->
    <string-array name="jenis_lapangan">
        <item>Vinyl</item>
        <item>Sintetis</item>
    </string-array>

    <string-array name="jamBuka">
        <!--        <item>1</item>-->
        <!--        <item>2</item>-->
        <!--        <item>3</item>-->
        <!--        <item>4</item>-->
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <!--        <item>21</item>-->
        <!--        <item>22</item>-->
        <!--        <item>23</item>-->
    </string-array>

    <string-array name="jamTutup">
        <item>24</item>
        <item>23</item>
        <item>22</item>
        <item>21</item>
        <item>20</item>
        <item>19</item>
        <item>18</item>
        <item>17</item>
        <item>16</item>
        <item>15</item>
        <item>14</item>
        <item>13</item>
        <!--        <item>12</item>-->
        <!--        <item>11</item>-->
        <!--        <item>10</item>-->
        <!--        <item>09</item>-->
        <!--        <item>08</item>-->
        <!--        <item>07</item>-->
        <!--        <item>06</item>-->
        <!--        <item>05</item>-->
        <!--        <item>04</item>-->
        <!--        <item>03</item>-->
        <!--        <item>02</item>-->
        <!--        <item>01</item>-->
        <!--        <item>00</item>-->
    </string-array>

    <string-array name="menit">
        <item>00</item>
        <!--        <item>01</item>-->
        <!--        <item>02</item>-->
        <!--        <item>03</item>-->
        <!--        <item>04</item>-->
        <!--        <item>05</item>-->
        <!--        <item>06</item>-->
        <!--        <item>07</item>-->
        <!--        <item>08</item>-->
        <!--        <item>09</item>-->
        <!--        <item>10</item>-->
        <!--        <item>11</item>-->
        <!--        <item>12</item>-->
        <!--        <item>13</item>-->
        <!--        <item>14</item>-->
        <item>15</item>
        <!--        <item>16</item>-->
        <!--        <item>17</item>-->
        <!--        <item>18</item>-->
        <!--        <item>19</item>-->
        <!--        <item>20</item>-->
        <!--        <item>21</item>-->
        <!--        <item>22</item>-->
        <!--        <item>23</item>-->
        <!--        <item>24</item>-->
        <!--        <item>25</item>-->
        <!--        <item>26</item>-->
        <!--        <item>27</item>-->
        <!--        <item>28</item>-->
        <!--        <item>29</item>-->
        <item>30</item>
        <!--        <item>31</item>-->
        <!--        <item>32</item>-->
        <!--        <item>33</item>-->
        <!--        <item>34</item>-->
        <!--        <item>35</item>-->
        <!--        <item>36</item>-->
        <!--        <item>37</item>-->
        <!--        <item>38</item>-->
        <!--        <item>39</item>-->
        <!--        <item>40</item>-->
        <!--        <item>41</item>-->
        <!--        <item>42</item>-->
        <!--        <item>43</item>-->
        <!--        <item>44</item>-->
        <item>45</item>
        <!--        <item>46</item>-->
        <!--        <item>47</item>-->
        <!--        <item>48</item>-->
        <!--        <item>49</item>-->
        <!--        <item>50</item>-->
        <!--        <item>51</item>-->
        <!--        <item>52</item>-->
        <!--        <item>53</item>-->
        <!--        <item>54</item>-->
        <!--        <item>55</item>-->
        <!--        <item>56</item>-->
        <!--        <item>57</item>-->
        <!--        <item>58</item>-->
        <item>59</item>
    </string-array>

    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="btn_perbarui">Perbarui</string>
    <string name="tv_field_name">Nama</string>
    <string name="tv_fasilitas">Fasilitas</string>
    <string name="tv_jamBuka">Jam Buka</string>
    <string name="tv_jamTutup">Jam Tutup</string>
    <string name="tv_noTelp">No Telepon</string>
    <string name="tv_alamat">Alamat</string>
    <string name="tv_latitude">Latitude</string>
    <string name="tv_longitude">Longitude</string>
    <string name="btn_backHome">Home</string>
    <string name="btn_addSubField">Tambah Sub</string>
    <string name="verifikasi">verifikasi</string>
    <string name="resend_otp">Kirim Ulang</string>
    <string name="btn_addField">Add Field</string>
    <string name="titik2">:</string>
    <string name="tab_text_1">Detail</string>
    <string name="tab_text_2">Daftar Lapangan</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tv_jenis">Jenis Lapangan</string>
    <string name="tv_field_kode">Kode Lapangan</string>
    <string name="tv_hargaSiag">Harga Siang</string>
    <string name="tv_hargaMalam">Harga Malam</string>
    <string name="nama_admin">Nama</string>
    <string name="tv_email">Email</string>
    <string name="tv_notelp_admin">No Telepon</string>
    <string name="info">Info Lapangan</string>
    <string name="tv_register">Daftar</string>
    <string name="btn_Masuk">Masuk</string>
    <string name="et_kata_sandi">Kata Sandi</string>
    <string name="forgetpass_info">Masukkan email yang sudah terdaftar</string>
    <string name="btn_ferivikasi">Verifikasi</string>
    <string name="lupasandi">Lupa Sandi?</string>
    <string name="keluar">Keluar</string>
    <string name="admin">Admin</string>
    <string name="hayy">Hi, </string>
    <string name="pilih_foto">Pilih Foto</string>
    <string name="tv_nama_admin">Nama</string>
    <string name="images">images</string>
    <string name="logoaccount">logoaccount</string>
    <string name="garisvertical">|</string>
    <string name="halaman_utama">Halaman Utama</string>
    <string name="detail_lapangan">Detail Lapangan</string>
    <string name="title_activity_maps">Map</string>
    <string name="jenis">Jenis Lapangan</string>
    <string name="harga_terendah">Harga Terendah</string>
    <string name="harga_tertinggi">Harga Tertinggi</string>
    <string name="tampil_map">Buka Peta</string>
    <string name="vinyl">Vinyl</string>
    <string name="sintetis">Sintetis</string>
    <string name="tambah">Tambah +</string>
    <string name="input_tempat_futsal">Input Tempat Futsal</string>
    <string name="button_back">button_back</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info_admin">Info Admin</string>
    <string name="input_lapangan">Input Lapangan</string>
    <string name="update_tempat_futsal">Update Tempat Futsal</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="update_lapangan">Update Lapangan</string>
    <string name="password">Password</string>
</resources>