<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/default_padding"
        tools:context=".layouts.field.FieldDetailActivity">

    <!--Kode Lapangan-->

    <LinearLayout
            style="@style/matchwrap"
            android:layout_marginBottom="@dimen/default_margin">

        <TextView
                style="@style/tvFieldDetail"
                android:text="@string/tv_field_kode" />

        <TextView
                style="@style/tvTitik2"
                android:layout_gravity="center_vertical" />

        <TextView
                android:id="@+id/tv_kode_lapangan"
                style="@style/tvFieldDetail2"
                android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <!--Jenis-->

    <LinearLayout
            style="@style/matchwrap"
            android:layout_marginBottom="@dimen/default_margin">

        <TextView
                style="@style/tvFieldDetail"
                android:text="@string/tv_jenis" />

        <TextView
                style="@style/tvTitik2"
                android:layout_gravity="center_vertical" />

        <TextView
                android:id="@+id/tv_jenis_lapangan"
                style="@style/tvFieldDetail2"
                android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <!--harga siang-->
    <LinearLayout
            style="@style/matchwrap"
            android:layout_marginBottom="@dimen/default_margin">

        <TextView
                style="@style/tvFieldDetail"
                android:text="@string/tv_hargaSiag" />

        <TextView style="@style/tvTitik2" />

        <TextView
                android:id="@+id/tv_harga_siang"
                style="@style/tvFieldDetail2" />
    </LinearLayout>

    <!--Harga Malam-->

    <LinearLayout
            style="@style/matchwrap"
            android:layout_marginBottom="@dimen/default_margin">

        <TextView
                style="@style/tvFieldDetail"
                android:text="@string/tv_hargaMalam" />

        <TextView style="@style/tvTitik2" />

        <TextView
                android:id="@+id/tv_harga_malam"
                style="@style/tvFieldDetail2" />
    </LinearLayout>

    <Button
            android:id="@+id/btn_perbarui"
            style="@style/button"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/btn_perbarui" />

</LinearLayout>