<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/constraintLayout"
        style="@style/allmatchparent"
        tools:context=".layouts.place.PlaceDetailActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                style="@style/matchwrap"
                android:orientation="vertical"
                android:paddingBottom="@dimen/value30dp"
                tools:ignore="MissingConstraints">

            <com.glide.slider.library.SliderLayout
                    android:id="@+id/carousels"
                    android:layout_width="match_parent"
                    android:layout_height="220dp">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/ic_maps"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        app:fabCustomSize="50dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/colorPrimary"
                        android:foregroundGravity="center"
                        android:foreground="@android:drawable/ic_dialog_map"
                        app:backgroundTint="@color/colorPrimary"
                        tools:ignore="MissingConstraints" />


            </com.glide.slider.library.SliderLayout>

            <LinearLayout
                    style="@style/matchwrap"
                    android:layout_marginTop="@dimen/margin_2"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/padding_5"
                    android:paddingRight="@dimen/padding_5">

                <!--Nama Tempat Futsal-->

                <LinearLayout style="@style/matchwrap">

                    <TextView
                            style="@style/tvPlaceDetail1"
                            android:text="@string/tv_field_name" />

                    <TextView style="@style/tvTitik2" />

                    <TextView
                            android:id="@+id/tv_nama_tempat"
                            style="@style/tvPlaceDetail2" />
                </LinearLayout>

                <!--Jam Buka-->

                <LinearLayout style="@style/matchwrap">

                    <TextView
                            style="@style/tvPlaceDetail1"
                            android:text="@string/tv_jamBuka" />

                    <TextView style="@style/tvTitik2" />

                    <TextView
                            android:id="@+id/tv_jam_buka"
                            style="@style/tvPlaceDetail2" />

                </LinearLayout>

                <!--Jam Tutup-->

                <LinearLayout style="@style/matchwrap">

                    <TextView
                            style="@style/tvPlaceDetail1"
                            android:text="@string/tv_jamTutup" />

                    <TextView style="@style/tvTitik2" />

                    <TextView
                            android:id="@+id/tv_jam_tutup"
                            style="@style/tvPlaceDetail2" />

                </LinearLayout>

                <!--No Telepon-->

                <LinearLayout style="@style/matchwrap">

                    <TextView
                            style="@style/tvPlaceDetail1"
                            android:text="@string/tv_noTelp" />

                    <TextView
                            style="@style/tvTitik2"
                            android:layout_gravity="center_vertical" />

                    <TextView
                            android:id="@+id/tv_no_telepon"
                            style="@style/tvPlaceDetail2"
                            android:layout_gravity="center_vertical" />

                </LinearLayout>

                <!--Fasilitas-->

                <LinearLayout style="@style/matchwrap">

                    <TextView
                            style="@style/tvPlaceDetail1"
                            android:text="@string/tv_fasilitas" />

                    <TextView style="@style/tvTitik2" />

                    <TextView
                            android:id="@+id/tv_fasilitas"
                            style="@style/tvPlaceDetail2" />
                </LinearLayout>

                <!--Alamat-->

                <LinearLayout
                        style="@style/matchwrap"
                        android:layout_marginBottom="@dimen/margin_2">

                    <TextView
                            style="@style/tvPlaceDetail1"
                            android:text="@string/tv_alamat" />

                    <TextView style="@style/tvTitik2" />

                    <TextView
                            android:id="@+id/tv_alamat"
                            style="@style/tvPlaceDetail2" />

                </LinearLayout>

                <!--Latitude-->

                <LinearLayout style="@style/matchwrap">

                    <TextView
                            style="@style/tvPlaceDetail1"
                            android:text="@string/tv_latitude" />

                    <TextView style="@style/tvTitik2" />

                    <TextView
                            android:id="@+id/tv_latitude"
                            style="@style/tvPlaceDetail2" />

                </LinearLayout>

                <!--Longitude-->

                <LinearLayout style="@style/matchwrap">

                    <TextView
                            style="@style/tvPlaceDetail1"
                            android:text="@string/tv_longitude" />

                    <TextView style="@style/tvTitik2" />

                    <TextView
                            android:id="@+id/tv_longitude"
                            style="@style/tvPlaceDetail2" />

                </LinearLayout>

                <Button
                        android:id="@+id/btn_update_place"
                        style="@style/button"
                        android:paddingTop="@dimen/padding_5"
                        android:text="@string/btn_perbarui" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>