<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/allmatchparent"
        tools:context=".layouts.field.CreateFieldActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_update_field"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:layout_marginBottom="5dp"
            android:background="@color/colorPrimary"
            android:elevation="@dimen/default_padding">


        <RelativeLayout style="@style/allmatchparent">

            <ImageButton
                    android:id="@+id/back_to_field_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingEnd="@dimen/padding_5"
                    android:background="@color/transparent"
                    android:src="@drawable/arrow_back"
                    android:contentDescription="@string/button_back" />

            <TextView
                    style="@style/allwrapcontent"
                    android:layout_marginStart="@dimen/margin_2"
                    android:layout_centerVertical="true"
                    android:text="@string/update_lapangan"
                    android:layout_toEndOf="@id/back_to_field_list"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/huruf18"
                    android:textStyle="bold" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
            android:id="@+id/linlay"
            style="@style/matchwrap"
            android:padding="@dimen/default_padding"
            android:layout_below="@id/toolbar_update_field"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

        <LinearLayout
                style="@style/linlayCreatePlaceActivity"
                android:layout_marginBottom="7dp"
                android:orientation="vertical">

            <TextView
                    style="@style/tvCreatePlace"
                    android:text="@string/tv_field_kode" />

            <EditText
                    android:id="@+id/et_updt_kodeLapangan"
                    style="@style/etCreateField"
                    android:inputType="text" />

        </LinearLayout>

        <LinearLayout
                style="@style/linlayCreatePlaceActivity"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/margin_2">

            <TextView
                    style="@style/tvCreatePlace"
                    android:text="@string/tv_jenis" />

            <FrameLayout
                    style="@style/matchwrap"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:background="@drawable/spinner_bg">

                <Spinner
                        android:id="@+id/spn_updt_jenisLapangan"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spn_height"
                        android:entries="@array/jenis_lapangan"
                        android:spinnerMode="dropdown" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
                style="@style/linlayCreatePlaceActivity"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/padding_5">

            <TextView
                    style="@style/tvCreatePlace"
                    android:text="@string/tv_hargaSiag" />

            <EditText
                    android:id="@+id/et_updt_hargaSiang"
                    style="@style/etCreateField"
                    android:inputType="number" />

        </LinearLayout>

        <LinearLayout
                style="@style/linlayCreatePlaceActivity"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/default_margin">

            <TextView
                    style="@style/tvCreatePlace"
                    android:text="@string/tv_hargaMalam" />

            <EditText
                    android:id="@+id/et_updt_hargaMalam"
                    style="@style/etCreateField"
                    android:inputType="number" />

        </LinearLayout>

        <Button
                android:id="@+id/btn_save_updateField"
                style="@style/button"
                android:layout_marginTop="@dimen/padding_5"
                android:text="@string/btn_simpan_sub_lap_baru" />
    </LinearLayout>

    <ProgressBar
            android:id="@+id/pb_update_field"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

</RelativeLayout>