<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".layouts.register.RegisterActivity">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:padding="@dimen/padding_18"
                  android:layout_gravity="center_vertical"
                  android:orientation="vertical">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/account_icon"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:src="@drawable/ic_account_icon"/>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">

            <EditText android:id="@+id/et_name_register"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="@dimen/default_margin"
                      android:layout_marginBottom="@dimen/default_margin"
                      android:background="@drawable/outline_stroke_ouval"
                      android:hint="@string/et_nama_admin"
                      android:inputType="text"
                      android:drawableLeft="@drawable/ic_account_box"
                      android:drawablePadding="@dimen/padding_5"
                      android:textColorHint="@android:color/darker_gray"/>

            <EditText android:id="@+id/et_email_register"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginBottom="@dimen/default_margin"
                      android:background="@drawable/outline_stroke_ouval"
                      android:hint="@string/et_email"
                      android:inputType="textEmailAddress"
                      android:drawableLeft="@drawable/ic_mail"
                      android:drawablePadding="@dimen/padding_5"
                      android:textColorHint="@android:color/darker_gray"/>

            <EditText android:id="@+id/et_password_register"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginBottom="@dimen/default_margin"
                      android:background="@drawable/outline_stroke_ouval"
                      android:hint="@string/et_kata_sandi"
                      android:inputType="textPassword"
                      android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                      android:drawablePadding="@dimen/padding_5"
                      android:textColorHint="@android:color/darker_gray"/>

            <Button android:layout_marginTop="@dimen/default_margin"
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_ouval"
                    android:text="@string/btn_register"
                    android:textColor="@color/buttonTextColor"/>

        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:layout_marginTop="@dimen/default_margin"
                      android:gravity="center">

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/sudah_punya_akun"/>

            <TextView android:id="@+id/tv_login"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginLeft="@dimen/padding_5"
                      android:text="@string/tv_masuk"
                      android:textColor="@color/buttonColor"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>


