<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/default_padding"
        tools:context=".layouts.login.ForgetPassword">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/forgetpass_info"
                      android:textStyle="bold"
                      android:textSize="@dimen/fontSz_loginInfo"
                      android:textColor="@color/colorPrimary"
                      android:paddingBottom="@dimen/default_padding"/>

            <EditText android:id="@+id/et_email_login"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginBottom="@dimen/default_margin"
                      android:background="@drawable/outline_stroke"
                      android:hint="@string/et_email"
                      android:inputType="textEmailAddress"
                      android:textColorHint="@android:color/darker_gray"/>

            <Button android:layout_marginTop="@dimen/default_margin"
                    android:id="@+id/btn_verifikasi_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_ouval"
                    android:text="@string/btn_ferivikasi"
                    android:textColor="@color/buttonTextColor"/>

    </LinearLayout>

</LinearLayout>